Change database file

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@
 
 # Ignore application configuration
 /config/application.yml
+.elasticbeanstalk/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
