--- a/config/database.yml
+++ b/config/database.yml
@@ -47,6 +47,14 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+
+#   DB Instance:      ID pmdb
+#   DB name:          pm_production 
+#   Master Username:  Andrew
+#   Master Password:  PMDB;19x92#
+#   Master Password:  PMDB;19x92#
+
+
 production:
   adapter: mysql2
   encoding: utf8
